--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 /* Banner */
 #header {
-  background: url('https://i.imgur.com/hQUv1rh.jpg') no-repeat center top !important;
+  background: url('https://tenor.com/dBxDzEnRT3q.gif') no-repeat center top !important;
   background-size: cover !important;
   border-bottom: 2px solid rgba(200,240,255,0.2) !important;
   height: 250px !important;
